@@ -11,6 +11,18 @@
   </div>
   <div class="visualClear"></div>
 
+
+
+  <tal:comment replace="nothing">In and out moves</tal:comment>
+  <tal:field define="fieldName python: 'inAndOutMoves'; ajaxEdit python:True">
+    <metal:f use-macro="context/@@pm-macros/viewContentField"/>
+  </tal:field>
+
+  <tal:comment replace="nothing">Notes</tal:comment>
+  <tal:field define="fieldName python: 'notes'; ajaxEdit python:True">
+    <metal:f use-macro="context/@@pm-macros/viewContentField"/>
+  </tal:field>
+
   <tal:comment replace="nothing">Observations</tal:comment>
   <tal:field define="fieldName python: 'observations'; ajaxEdit python:True"
              condition="python: context.showObs('observations')">
