@@ -275,6 +275,12 @@
             </tr>
           </table>
         </fieldset>
+        <tal:field define="fieldName python: 'inAndOutMoves'">
+          <metal:f use-macro="context/@@pm-macros/editContentField"/>
+        </tal:field>
+        <tal:field define="fieldName python: 'notes'">
+          <metal:f use-macro="context/@@pm-macros/editContentField"/>
+        </tal:field>
         <tal:field define="fieldName python: 'observations'"
                    condition="python: context.showObs('observations')">
           <metal:f use-macro="context/@@pm-macros/editContentField"/>
