@@ -409,6 +409,16 @@
         </tr>
     </table>
 
+    <tal:comment replace="nothing">In and out moves</tal:comment>
+    <tal:field define="fieldName python: 'inAndOutMoves'; ajaxEdit python:True">
+       <metal:f use-macro="context/@@pm-macros/viewContentField"/>
+    </tal:field>
+
+    <tal:comment replace="nothing">Notes</tal:comment>
+    <tal:field define="fieldName python: 'notes'; ajaxEdit python:True">
+       <metal:f use-macro="context/@@pm-macros/viewContentField"/>
+    </tal:field>
+
     <tal:comment replace="nothing">Observations</tal:comment>
     <tal:field define="fieldName python: 'observations'; ajaxEdit python:True">
        <metal:f use-macro="context/@@pm-macros/viewContentField"/>
