@@ -2669,7 +2669,7 @@ class testMeetingItem(PloneMeetingTestCase):
                          'itemAssemblyExcused', 'itemInitiator', 'itemIsSigned',
                          'itemKeywords', 'itemNumber', 'itemSignatories',
                          'itemSignatures', 'itemTags', 'listType', 'manuallyLinkedItems',
-                         'meetingTransitionInsertingMe', 'observations',
+                         'meetingTransitionInsertingMe', 'inAndOutMoves', 'notes', 'observations',
                          'predecessor', 'preferredMeeting', 'proposingGroup',
                          'questioners', 'takenOverBy', 'templateUsingGroups',
                          'toDiscuss', 'votesAreSecret', 'otherMeetingConfigsClonableToEmergency']
