@@ -113,6 +113,10 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - For the workflowAdaptation "return_to_proposing_group", the custom workflow permissions defined in
   RETURN_TO_PROPOSING_GROUP_CUSTOM_PERMISSIONS are now defined by item workflow, so it is possible
   to use different values for different item workflows
+- Added new richText field 'Meeting.inAndOutMoves/MeetingItem.inAndOutMoves' to be able to specifically
+  encode in and out assembly members movements on an item or on a meeting
+- Added new richText field 'Meeting.notes/MeetingItem.notes' to be able to specifically
+  encode notes to be used in document generation (for example) on an item or on a meeting
 
 3.3 (2015-02-27)
 ----------------
